added more questions and topics

--- a/Interview Problems.ipynb
+++ b/Interview Problems.ipynb
@@ -2,18 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "c4339b0f",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "balanced\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#balanced string or not\n",
     "inp_string = 'wqeeqweqwe(fsdfsdfsdfsd[34234234234234]fsdfds)[{}]'\n",
@@ -49,21 +41,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "7cc29be0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[23]"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#unique prime number from a list\n",
     "li = [2,3,4,5,23,21,3,7,7,24,30,35,2,5]\n",
@@ -86,21 +67,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1d485416",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[2, 2, 2, 2, 2, 2, 2, 2, 2]"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#get each number from digit\n",
     "import math\n",
@@ -111,7 +81,9 @@
     "elif num == 10:\n",
     "    op.extend([1,0])\n",
     "else:\n",
+    "    count=0\n",
     "    while(num>10):\n",
+    "        print()\n",
     "        rem = num%10\n",
     "        num = math.trunc(num/10)\n",
     "        op.append(rem)\n",
@@ -122,21 +94,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "64ebc2fc",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Atletico Madrid', 'Real Madrid']"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import requests\n",
     "year = 2015\n",
@@ -175,21 +136,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1b6ab392",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0, 0, 1, 2, 3, 4]"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# sort without using sort function\n",
     "\n",
@@ -208,21 +158,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "66e63294",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'adefbclmjk'"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# find largest substring in string\n",
     "s='abcadefbclmjk'\n",
@@ -249,33 +188,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": null,
    "id": "1834d1ea",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "c\n",
-      "0\n",
-      "1\n",
-      "c\n",
-      "1\n",
-      "1\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['c', 'd', 'f', 'x', 'e', 'z']"
-      ]
-     },
-     "execution_count": 81,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from collections import Counter,defaultdict\n",
     "str1 = \"abcdfxa\"\n",
@@ -307,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "91a3fb61",
    "metadata": {},
    "outputs": [],
@@ -317,45 +233,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "30393d78",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "0\n",
-      "4\n",
-      "7\n",
-      "3\n",
-      "6\n",
-      "5\n",
-      "0\n",
-      "3\n",
-      "0\n",
-      "1\n",
-      "0\n",
-      "6\n",
-      "4\n",
-      "2\n",
-      "0\n",
-      "8\n",
-      "0\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#xor gate to find missing pair\n",
     "a=[2,2,4,3,4,5,3,5,3,3,1,1,6,2,6,2,8,8]\n",
@@ -369,64 +250,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "b331f714",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 3, 4, 5, 6]\n",
-      "[1, 2, 3, 4, 5]\n",
-      "[1, 2, 3, 4]\n",
-      "[1, 2, 3]\n",
-      "[1, 2]\n",
-      "[1]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[6, 5, 4, 3, 2, 1]"
-      ]
-     },
-     "execution_count": 21,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#reverse array using recurrsion\n",
     "arr=[1,2,3,4,5,6]\n",
+    "count=0\n",
     "def reverse(arr):\n",
     "    if len(arr)==0:\n",
     "        return []\n",
     "    elif len(arr)==1:\n",
     "        return arr\n",
     "    else:\n",
+    "\n",
     "        b = [arr.pop()] + reverse(arr)\n",
+    "        global count \n",
+    "        count = count + 1\n",
+    "        print(count)\n",
     "        return b\n",
     "reverse(arr)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "d7366d07",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[5, 4, 6, 5, -1, -2, -3, -2, -6]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#group postive and negative number together\n",
     "arr = [-1,-2,-3,5,4,6,-2,5,-6]\n",
@@ -442,18 +294,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "960c463e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "arr=[1,2,3,4]\n",
     "print(arr.pop())"
@@ -461,21 +305,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "312c3323",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "([2, 2, 3],)"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = ([1,2,3],)\n",
     "a[0][0]=2\n",
@@ -488,7 +321,26 @@
    "id": "4fcbcf91",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#MRO\n",
+    "class abc:\n",
+    "    def __init__(self, a, b):\n",
+    "        print(a, b)\n",
+    "class efg(abc):\n",
+    "    def __init__(self, a,b):\n",
+    "        print(a, b, '2nd')\n",
+    "        super().__init__(a, b)\n",
+    "class hij(abc):\n",
+    "    def __init__(self, a,b):\n",
+    "        print(a, b, '3rd')\n",
+    "        super().__init__(a, b)\n",
+    "class klm(efg, hij):\n",
+    "    def __init__(self, a,b):\n",
+    "        print(a, b, '4th')\n",
+    "        super().__init__(a, b)\n",
+    "    \n",
+    "kl =klm(2,3)"
+   ]
   },
   {
    "cell_type": "code",
@@ -496,7 +348,18 @@
    "id": "bfae9f13",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#add using recuersive\n",
+    "li = [1,2,3,4,5,6]\n",
+    "\n",
+    "def sumation(li):\n",
+    "    if len(li)==1:\n",
+    "        return li[0]\n",
+    "    else:\n",
+    "        print(li)\n",
+    "        return li[0] + sumation(li[1:])\n",
+    "sumation(li)"
+   ]
   },
   {
    "cell_type": "code",
@@ -504,27 +367,35 @@
    "id": "98dba0a0",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a=[1,2,3,[4,5]]\n",
+    "\n",
+    "def add (a):\n",
+    "    sum_res =0\n",
+    "    for i in a:\n",
+    "        if type(i) == list:\n",
+    "            sum_res = sum_res + add(i)\n",
+    "        else:\n",
+    "            sum_res = sum_res + i\n",
+    "    return sum_res\n",
+    "add(a)   "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "b443c104",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "4%2"
+    "#factorial\n",
+    "n= 0\n",
+    "def factorial(n):\n",
+    "    if n == 1 or n == 0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return n*factorial(n-1)\n",
+    "factorial(n) "
    ]
   },
   {
@@ -533,7 +404,16 @@
    "id": "93bf303b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n=3455678909976896895787545645769070907979077099090790907079790790790790709709709709\n",
+    "def sumdigits(n):\n",
+    "    li = list(str(n))\n",
+    "    if len(li) == 1:\n",
+    "        return int(li[0])\n",
+    "    else:\n",
+    "        return int(li[0]) + sumdigits(int(''.join(li[1:])))\n",
+    "sumdigits(n)"
+   ]
   },
   {
    "cell_type": "code",
@@ -541,7 +421,16 @@
    "id": "120e42a8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n= 11\n",
+    "\n",
+    "def sumfun(n):\n",
+    "    if n <= 0:\n",
+    "        return  n\n",
+    "    else:\n",
+    "        return n + sumfun(n-2)\n",
+    "sumfun(6)"
+   ]
   },
   {
    "cell_type": "code",
@@ -549,7 +438,16 @@
    "id": "71a06d61",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "n=5\n",
+    "def harmonicsum(n):\n",
+    "    if n <=1:\n",
+    "        return 1.00\n",
+    "    else:\n",
+    "        print(n)\n",
+    "        return 1/(n) + harmonicsum(n-1)\n",
+    "harmonicsum(n)"
+   ]
   },
   {
    "cell_type": "code",
@@ -557,7 +455,16 @@
    "id": "f073241f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def pow_func(a,b):\n",
+    "    if b==1:\n",
+    "        return a\n",
+    "    elif b <=0:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return a * pow_func(a,(b-1))\n",
+    "pow_func(2,3)"
+   ]
   },
   {
    "cell_type": "code",
@@ -565,47 +472,54 @@
    "id": "d454d185",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Gcd\n",
+    "def gcd(a,b):\n",
+    "    max_op = max(a,b)\n",
+    "    min_op = min(a,b)\n",
+    "    if min_op == 0:\n",
+    "        return max_op\n",
+    "    elif min_op == 1:\n",
+    "        return 1\n",
+    "    else:\n",
+    "        return gcd(min_op,max_op%min_op)\n",
+    "        \n",
+    "gcd(10,5)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "034b0e93",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['a', 'a']"
-      ]
-     },
-     "execution_count": 59,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "a = [1,2,3,4]\n",
+    "\n",
+    "def reverse(a):\n",
+    "    if len(a)==1:\n",
+    "        return a\n",
+    "    else:\n",
+    "        return [a[-1]] + reverse(a[:-1])\n",
+    "    \n",
+    "reverse(a)==a"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "100c35fa",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['a']"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "a=['a']\n",
-    "a[0:1]"
+    "\n",
+    "def reverse(a):\n",
+    "    if len(a)==1:\n",
+    "        return a\n",
+    "    else:\n",
+    "        return [a.pop()] + reverse(a)\n",
+    "    \n",
+    "print(reverse(a))"
    ]
   },
   {
@@ -614,7 +528,11 @@
    "id": "ad4406b1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = [2,3,1,4]\n",
+    "\n",
+    "def sort()"
+   ]
   },
   {
    "cell_type": "code",
@@ -622,7 +540,20 @@
    "id": "5c62c9b8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#bubblesort\n",
+    "#1,2,3,6,8,4,7\n",
+    "#1,2,3,6,4,7,8 - first iteration\n",
+    "#1,2,3,4,6,7,8 - second iteration\n",
+    "li = [7,6,5,4,3,2,1]\n",
+    "count=0\n",
+    "for i in range(len(li)-1,0,-1): #(n-1)\n",
+    "    for j in range(0,i):#(n-1)\n",
+    "        if li[j]>li[j+1]:\n",
+    "            li[j],li[j+1] = li[j+1],li[j]\n",
+    "li\n",
+    "count"
+   ]
   },
   {
    "cell_type": "code",
@@ -630,7 +561,20 @@
    "id": "1e6f2b97",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#selection sort\n",
+    "\n",
+    "li =[5,3,6,8,7,2]\n",
+    "for i in range(0,len(li)-1):\n",
+    "    min_pos= i\n",
+    "    for j in range(i,len(li)):\n",
+    "        if li[j]<li[min_pos]:\n",
+    "            min_pos=j\n",
+    "    li[i],li[min_pos]=li[min_pos],li[i]\n",
+    "\n",
+    "\n",
+    "li       "
+   ]
   },
   {
    "cell_type": "code",
@@ -638,23 +582,91 @@
    "id": "91cbb894",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#quick sort\n",
+    "\n",
+    "arr =[5,8,1,7,6,2,4,3]\n",
+    "\n",
+    "def getmiddle(low,high):\n",
+    "    global arr\n",
+    "    pivot = arr[low]\n",
+    "    i=low\n",
+    "    j=high\n",
+    "    while(i<j):\n",
+    "        while(arr[i]<=pivot):\n",
+    "            i=i+1\n",
+    "        while(arr[j]>pivot):\n",
+    "            j=j-1\n",
+    "        if(i<j):\n",
+    "            arr[i],arr[j] = arr[j],arr[i]\n",
+    "    arr[low],arr[j] = arr[j],arr[low]\n",
+    "    return j\n",
+    "\n",
+    "def quicksort(low,high):\n",
+    "    if(low<high):\n",
+    "        res = getmiddle(low,high)\n",
+    "        quicksort(low,res)\n",
+    "        quicksort(res+1,high)\n",
+    "quicksort(0,len(arr)-1)\n",
+    "arr"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "564cacb1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#li = [[1,2],[5,6],[2,3],[3,4],[1,2]]\n",
+    "#op =[[1,6],[2,3],[1,2]]\n",
+    "li=[[1,2],[3,4],[5,6]]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "b1aba6e7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "3\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "import itertools\n",
+    "\n",
+    "li=[[1,2],[3,4],[5,6]]\n",
+    "\n",
+    "def cutom(a,b):\n",
+    "    if a[1]<=b[0]:\n",
+    "        return [a[0],b[1]]\n",
+    "    else:\n",
+    "        return [a,b]\n",
+    "    \n",
+    "\n",
+    "            \n",
+    "\n",
+    "\n",
+    "op    \n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
@@ -762,21 +774,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "bff9ac52",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "30.0"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "300/10"
    ]
