--- a/Interview Problems.ipynb
+++ b/Interview Problems.ipynb
@@ -670,59 +670,184 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "f29c11e5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#sorting with o(n) complexity\n",
+    "li=[1,1,1,1,1,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,1,1,1,1,1,1,1,1]\n",
+    "for i in range(0,len(li)-1): #n\n",
+    "    if li[i]==1:#n/2\n",
+    "        for j in range(i+1,len(li)):\n",
+    "\n",
+    "            if li[j]==0:\n",
+    "                li[i],li[j]=li[j],li[i]\n",
+    "                break                 #n/2\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "id": "0d8574bc",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'navaP si eman yM iH'"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Reverse string\n",
+    "\n",
+    "string =\"Hi My name is Pavan\"\n",
+    "revstring = string[::-1]\n",
+    "a=\"\".join(revstring)\n",
+    "a"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "35d312a7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'navaP si eman yM iH'"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "op =[]\n",
+    "for i in range(len(string)-1,-1,-1):\n",
+    "    op.append(string[i])\n",
+    "\"\".join(op)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "9d2a3bce",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'navaP si eman yM iH'"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"\".join(list(reversed(string)))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "id": "7699b62b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Merge sorted array\n",
+    "\n",
+    "li1= [0,3,4,20,31]\n",
+    "li2=[4,6,30]\n",
+    "li3=li1+li2\n",
+    "li4=li3.copy()\n",
+    "#Bubble sort\n",
+    "for i in range(len(li3)-1,0,-1):\n",
+    "    for j in range(0,i):\n",
+    "        if(li3[j]>=li3[i]):\n",
+    "            li3[j],li3[i]=li3[i],li3[j]\n",
+    "#selection sort\n",
+    "for i in range(0,len(li4)-1):\n",
+    "    min_index = i\n",
+    "    for j in range(i,len(li4)):\n",
+    "        if li4[j]<li4[min_index]:\n",
+    "            min_index =j\n",
+    "    li4[i],li4[min_index]=li4[min_index],li4[i]\n"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "c1e78f5b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, 3, 5, 5, 6, 7, 8]"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#remove consuective duplicate elements\n",
+    "def removeDuplicates(S):\n",
+    "         \n",
+    "    n = len(S)\n",
+    "    if (n < 2) :\n",
+    "        return\n",
+    "    j = 0\n",
+    "    for i in range(n):\n",
+    "         \n",
+    "        # If current character S[i]\n",
+    "        # is different from S[j]\n",
+    "        if (S[j] != S[i]):\n",
+    "            j += 1\n",
+    "            S[j] = S[i]\n",
+    "     \n",
+    "    # Putting string termination\n",
+    "    # character.\n",
+    "    j += 1\n",
+    "    S = S[:j]\n",
+    "    return S\n",
+    "a=[1,2,2,3,4,5,5,3,3]\n",
+    "removeDuplicates(a"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "bbe30ba2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_items([('a', 2), ('d', 3), ('c', 1)])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#sorting dictionary\n",
+    "a={'a':2,'d':3,'c':1}\n",
+    "dict(sorted(a.items(),key=lambda elem: elem[1]))"
+   ]
   },
   {
    "cell_type": "code",
@@ -730,7 +855,15 @@
    "id": "63a45d1c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# count words from pragraph\n",
+    "from collections import Counter\n",
+    "customstr = \"Python python , I am learning in  Python\"\n",
+    "\n",
+    "li_str = customstr.split(\" \")\n",
+    "count = Counter(li_str)\n",
+    "print(dict(count))"
+   ]
   },
   {
    "cell_type": "code",
@@ -738,7 +871,18 @@
    "id": "adae5591",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#class example \n",
+    "class Person:\n",
+    "    def __init__(self,name,age):\n",
+    "        self.name = name\n",
+    "        self.age = age\n",
+    "        \n",
+    "    def display(self):\n",
+    "        return \"Hi {0}, my age is {1}\".format(self.name,self.age)\n",
+    "p1 = Person(\"Pavan\",25)\n",
+    "p1.display()\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -778,9 +922,7 @@
    "id": "bff9ac52",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "300/10"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
