--- a/Interview Problems.ipynb
+++ b/Interview Problems.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "#balanced string or not\n",
-    "inp_string = 'wqeeqweqwe(fsdfsdfsdfsd[34234234234234]fsdfds)[{}]'\n",
+    "inp_string = 'wqeeqweqwe(fsdfsdfsdfsd[34234234234234{]fsdfds)[{}]'\n",
     "\n",
     "\n",
     "\"\"\"\n",
@@ -21,7 +21,7 @@
     "\n",
     "open_list = ['{','(','[']\n",
     "close_list = ['}',')',']']\n",
-    "#op = [([[{]\n",
+    "#op = [([[]\n",
     "op=[]\n",
     "for i in inp_string:\n",
     "    if i in open_list:\n",
@@ -41,12 +41,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7cc29be0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[23]"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#unique prime number from a list\n",
+    "\n",
     "li = [2,3,4,5,23,21,3,7,7,24,30,35,2,5]\n",
     "temp = []\n",
     "op=[]\n",
@@ -62,7 +74,9 @@
     "for i in temp:\n",
     "    if temp.count(i)==1:\n",
     "        op.append(i)\n",
-    "op"
+    "op\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -158,10 +172,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "66e63294",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'adefbclmjk'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# find largest substring in string\n",
     "s='abcadefbclmjk'\n",
@@ -188,10 +213,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "1834d1ea",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['c', 'd', 'f', 'x', 'e', 'z']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from collections import Counter,defaultdict\n",
     "str1 = \"abcdfxa\"\n",
@@ -786,17 +822,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 5,
    "id": "c1e78f5b",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5, 3, 5, 3, 3]\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[2, 3, 5, 5, 6, 7, 8]"
+       "[1, 2, 3, 4, 5, 3]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,10 +863,11 @@
     "    # Putting string termination\n",
     "    # character.\n",
     "    j += 1\n",
+    "    print(S)\n",
     "    S = S[:j]\n",
     "    return S\n",
     "a=[1,2,2,3,4,5,5,3,3]\n",
-    "removeDuplicates(a"
+    "removeDuplicates(a)"
    ]
   },
   {
@@ -886,19 +930,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "403369ba",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'a': 3}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a={\"a\":2}\n",
+    "b=a\n",
+    "b\n",
+    "a['a'] =3\n",
+    "b\n",
+    "null"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "a29ef63d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (<ipython-input-2-d280ceecb643>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-2-d280ceecb643>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    def cal(n):\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
+   "source": [
+    "def cal(n):"
+   ]
   },
   {
    "cell_type": "code",
