--- a/python_practice_for_fun.ipynb
+++ b/python_practice_for_fun.ipynb
@@ -2928,7 +2928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "f01f0c1d",
    "metadata": {},
    "outputs": [
@@ -2947,7 +2947,7 @@
     "        print(\"first\")\n",
     "class f1(First):\n",
     "    def __init__(self):\n",
-    "        print(\"first\")\n",
+    "        print(\"f1\")\n",
     "class Second(f1):\n",
     "    pass\n",
     "\n",
@@ -2968,7 +2968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "68a69960",
    "metadata": {},
    "outputs": [
@@ -2977,7 +2977,6 @@
      "output_type": "stream",
      "text": [
       "D\n",
-      "C\n",
       "B\n",
       "2 3\n"
      ]
@@ -2995,7 +2994,7 @@
     "    def __init__(self,a,b):\n",
     "        print('C')\n",
     "        super().__init__(a,b)\n",
-    "class D(C,B):\n",
+    "class D(B,A):\n",
     "    def __init__(self,a,b):\n",
     "        print('D')\n",
     "        super().__init__(a,b)\n",
@@ -3031,40 +3030,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "5a2109d2",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "af2599eb",
-   "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "   "
+    "#walrus Operator\n",
+    "b= True\n",
+    "while(a:=b):\n",
+    "    print(a)\n",
+    "    b=False\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
+   "id": "af2599eb",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "test() got some positional-only arguments passed as keyword arguments: 'a, b'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-3-07cac3905c85>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mtest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m/\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[0ma\u001b[0m\u001b[1;33m+\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m \u001b[0mtest\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: test() got some positional-only arguments passed as keyword arguments: 'a, b'"
+     ]
+    }
+   ],
+   "source": [
+    "#only positional Argument\n",
+    "def test(a,b,/):\n",
+    "    return a+b\n",
+    "test(2,3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "dcff49ec",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "int"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of a=3\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "a=3\n",
+    "print(f\"The value of a={a}\")"
+   ]
   },
   {
    "cell_type": "code",
